--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "d3-shape": "^3.2.0",
     "emoji-flags": "^1.3.0",
     "express": "^4.18.2",
+    "ngx-moment": "^6.0.2",
+    "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -58,7 +60,6 @@
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
