--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.6",
     "@swimlane/ngx-charts": "^20.5.0",
-    "@swimlane/ngx-ui": "^46.0.0",
+    "@swimlane/ngx-ui": "~35.6.5",
     "d3-array": "^3.2.4",
     "d3-shape": "^3.2.0",
     "emoji-flags": "^1.3.0",
